# pacstash

./: .env  .envrc  .gitignore  Cargo.toml  README.md  cached_package.go  compose.yml  fetch.go  filesystem_cache.go  go.mod  go.sum  justfile  main.go  mirror.go  nginx.conf  pacstash.service  seed.rb  statistics.go  upstream.go
migrations/: 20241105001642_create_upstreams_table.sql  20241105001804_create_table_upstream_mirrors.sql  20241105001923_create_table_cached_packages.sql
src/: cached_package.rs  config.rs  disk_cache.rs  error.rs  fetch.rs  handler.rs  main.rs  response.rs  state.rs  statistics.rs  templates.rs  upstream.rs  upstream_mirror.rs
src/routes/: cache.rs  expire_cache.rs  mirrors.rs  mod.rs  not_found.rs  repo.rs  statistics.rs
templates/: layout.html  not_found.html  repo.html  statistics.html
views/: stats.html
